--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,14 @@
     </head>
 
     <body>
-        Here's to hoping for world peace ... 
+        Here's to hoping for world peace ... !!
         <form method="POST" action="/person">
             First name: <input type="text" id="firstname" name="firstname" /><br />
             Last name: <input type="text" id="lastname" name="lastname" /><br />
             <input type="submit" value="submit"/>
-        </form>    
+        </form>
+        <meta name="google-signin-client_id" content="1057843692494-0830gbb8q4r9metu3t30h2ms8nljago8.apps.googleusercontent.com">
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
     </body>
 </html>
