--- a/views/tokens.ejs
+++ b/views/tokens.ejs
@@ -3,7 +3,9 @@
         <link href="/assets/style.css" type="text/css" rel="stylehseet" />
     </head>
     <body>
-        <h1>id_token: <%= id_token %></h1>
-        <h1>access_token: <%= access_token %></h1>
+        <h3>id_token:</h1>
+        <%= id_token %>
+        <h3>access_token:</h3>
+         <%= access_token %>
     </body>
 </html>
