--- a/views/person.ejs
+++ b/views/person.ejs
@@ -3,8 +3,8 @@
         <link href="/assets/style.css" type="text/css" rel="stylehseet" />
     </head>
     <body>
-        <h1>Codename: <%= codename %></h1>
-        <h1>Firstname: <%= firstname %></h1>
-        <h1>Lastname: <%= lastname %></h1>
+        
+        <h1>Welcome, : <%= name %>!</h1>
+        <img src= <%= picture %>>
     </body>
 </html>
