--- a/views/person.ejs
+++ b/views/person.ejs
@@ -3,8 +3,10 @@
         <link href="/assets/style.css" type="text/css" rel="stylehseet" />
     </head>
     <body>
-        
-        <h1>Welcome, : <%= name %>!</h1>
+        <h3>Welcome!</h3>
+        <%= name %><br>
+        <%= email %><br>
+        <%= sub %><br>
         <img src= <%= picture %>>
     </body>
 </html>
