--- a/views/person.ejs
+++ b/views/person.ejs
@@ -7,6 +7,6 @@
         <%= name %><br>
         <%= email %><br>
         <%= sub %><br>
-        <img src= <%= picture %>>
+        <img src= <%= picture %> height="100" width="100">
     </body>
 </html>
