--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        Here's to hoping for world peace ... !!
+        Here's to hoping for world peace ... !!!
         <form method="POST" action="/oauth">
             First name: <input type="text" id="firstname" name="firstname" /><br />
             Last name: <input type="text" id="lastname" name="lastname" /><br />
