--- a/views/person.ejs
+++ b/views/person.ejs
@@ -3,7 +3,7 @@
         <link href="/assets/style.css" type="text/css" rel="stylehseet" />
     </head>
     <body>
-        <h3>Welcome!</h3>
+        <h3>Welcome! :-)</h3>
         <%= name %><br>
         <%= email %><br>
         <%= sub %><br>
