--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,9 @@
 
     <body>
         Here's to hoping for world peace!! ... :-)
+        
+        <a href=""><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"></a>
+        
         <form method="POST" action="/oauth">
             First name: <input type="text" id="firstname" name="firstname" /><br />
             Last name: <input type="text" id="lastname" name="lastname" /><br />
