--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,18 @@
+html {
+    background-color: #2E2E2E; 
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-weight: 700;
+}
+
+img {
+    
+}
+
+.logo {
+    width: 128px;
+    height: 128px;
 }
