--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <html>
     <head>
-        <link href=assets/style.css type=text/css rel=stylesheet />
-        
+        <link href=assets/style.css type=text/css rel=stylesheet />        
         <!--
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -11,16 +10,12 @@
     
     <body>
         
-        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png">
-        <img class="logo" src="http://yarnobsession.com/wp-content/uploads/2013/06/Pinterest-Logo-Vector-by-Jon-Bennallick-02.png"><br>
-        <img class="logo" src="https://historytech.files.wordpress.com/2015/03/google-logo.png">
-        <img class="logo" src="http://users.ox.ac.uk/~chri3110/images/Twitter-logo2.png">
+        <a href="/linkedin"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"></a>
+        <a href="/pinterest"><img class="logo" src="http://yarnobsession.com/wp-content/uploads/2013/06/Pinterest-Logo-Vector-by-Jon-Bennallick-02.png"></a><br>
+        <a href="/google"><img class="logo" src="https://historytech.files.wordpress.com/2015/03/google-logo.png"></a>
+        <a href="/twitter"><img class="logo" src="http://users.ox.ac.uk/~chri3110/images/Twitter-logo2.png"></a>
+        
         <!--
-        <form method="POST" action="/oauth">
-            First name: <input type="text" id="firstname" name="firstname" /><br />
-            Last name: <input type="text" id="lastname" name="lastname" /><br />
-            <input type="submit" value="submit"/>
-        </form>
         <meta name="google-signin-client_id" content="1057843692494-0830gbb8q4r9metu3t30h2ms8nljago8.apps.googleusercontent.com">
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
         -->
