--- a/views/person.ejs
+++ b/views/person.ejs
@@ -7,6 +7,7 @@
         <%= name %><br>
         <%= email %><br>
         <%= sub %><br>
-        <img src= <%= picture %> height="100" width="100">
+        <img src= <%= picture %> height="100" width="100"><br>
+        click <a href="/contacts">here</a> to view your contacts.
     </body>
 </html>
