--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         
         <a href="/linkedin"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"></a>
         <a href="/pinterest"><img class="logo" src="http://yarnobsession.com/wp-content/uploads/2013/06/Pinterest-Logo-Vector-by-Jon-Bennallick-02.png"></a><br>
-        <a href="/google"><img class="logo" src="https://historytech.files.wordpress.com/2015/03/google-logo.png"></a>
+        <a href="http://www.iit.edu"><img class="logo" src="https://historytech.files.wordpress.com/2015/03/google-logo.png"></a>
         <a href="/twitter"><img class="logo" src="http://users.ox.ac.uk/~chri3110/images/Twitter-logo2.png"></a>
         
         <!--
