--- a/views/person.ejs
+++ b/views/person.ejs
@@ -8,5 +8,8 @@
         <%= email %><br>
         <%= id %><br>
         <img src= <%= picture %> height="100" width="100"><br>
+        
+        click <a href="/contacts">here</a> to access your contacts!
+        
     </body>
 </html>
